welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:1: error: Missing closing brace `}' assumed here
def movemnt(n: Int, d: Unit): Unit = {
^Source:2: error: ';' expected but ')' found.
	for (i <- 1 to n) {println("move"))
                                          ^